<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    tools:context="net.tuurlievens.dotpict.fragments.DrawFragment"
    tools:layout_editor_absoluteX="0"
    tools:layout_editor_absoluteY="0">

    <ScrollView
        android:id="@+id/scrolllist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="20dp"
        android:gravity="bottom"
        android:translationZ="10dp"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/buttonlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/brushButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_brush_white_24dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/pickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_colorize_white_24dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fillButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_format_color_fill_white_24dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/rotateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_rotate_right_white_24dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/cameraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_photo_camera_white_24dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_clear_white_24dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_save_white_24dp" />

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/colorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_color_lens_white_32dp" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:translationZ="20dp"
        android:visibility="visible" />

</RelativeLayout>