<resources>
    <item type="id" name="CANVAS_TAG"/>
    <string name="app_name">Tuur\'s Dotpict</string>
    <string name="question">How many button per row/column do you want?</string>
    <string name="row">Rows</string>
    <string name="column">Columns</string>
    <string name="generate">Generate</string>
    <string name="toolsmessage">Holding the floating button shows more options.</string>
    <string name="colorpickermessage">The next pixel you touch will change the selected color.</string>
    <string name="savedmessage">Your drawing has been saved.</string>
    <string name="longpresssavemessage">Long press the save icon to load.</string>
    <string name="saves">Saves</string>
    <string name="loadmessage">Your current drawing will be overwritten.</string>
    <string name="savename">Savename</string>
    <string name="save">Save Drawing</string>
    <string name="load">Load Drawing</string>
    <string name="delete">Delete Drawing</string>
    <string name="deletemessage">Are you sure you want to delete this drawing?</string>
    <string name="invalidsavename">Picture not saved.\nThe savename cannot be empty.</string>
    <string name="photoheight">Photo height</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="frontcamera">Taken with front facing camera?</string>
    <string name="brushsize">Brush Size</string>
</resources>
