<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:layout_marginStart="16dp"
    android:padding="20dp"
    android:id="@+id/linearLayout"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/row"
        android:layout_marginTop="10dp" />

    <SeekBar
        android:id="@+id/seekBarRows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="45"
        android:progress="20" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/column"
        android:layout_marginTop="10dp" />

    <SeekBar
        android:id="@+id/seekBarColumns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="45"
        android:progress="20" />

</LinearLayout>