<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/body"
    tools:context="net.tuurlievens.dotpict.fragments.SavesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saves"
            android:textAlignment="textEnd"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>

    <ListView
        android:id="@+id/saveslist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>