<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment android:id="@+id/drawfragment"
        android:name="net.tuurlievens.dotpict.fragments.DrawFragment"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        tools:layout="@layout/fragment_draw" />

    <RelativeLayout
        android:id="@+id/savesparent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorBackground"
        android:visibility="gone">

        <fragment
            android:id="@+id/savesfragment"
            android:name="net.tuurlievens.dotpict.fragments.SavesFragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            tools:layout="@layout/fragment_saves" />

        <ImageView
            android:id="@+id/closebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:src="@drawable/ic_clear_black_24dp" />

    </RelativeLayout>

</FrameLayout>